# Twinkly-Matrix-App

./: .gitignore  BUILD_WINDOWS_QUICKSTART.md  COMMUNICATION_GUIDE.md  DDP_PERFORMANCE_DEBUG.md  IMPLEMENTATION_CHECKLIST.md  OPTIMIZATIONS_IMPLEMENTED.md  PACKAGING_WINDOWS.md  PERFORMANCE_MONITORING.md  QUICKSTART.md  README.md  README_VIDEO_CONTROL.md  RUNNING_ON_FPP.md  SCORE_COUNTER_QUICKREF.md  SCORE_COUNTER_SETUP.md  SCORE_IMPLEMENTATION.md  SETUP_INSTRUCTIONS.md  build_windows.py  deploy_to_fpp.sh  diagnose_fpp.py  diagnostics.sh  install_app.sh  main.py  pyproject.toml  setup.py  setup_fpp.sh  test_fpp.py  video_player.py
TwinklyWall/: .gitignore  UPLOAD_EXAMPLES.md  UPLOAD_VIDEO_FEATURE.md  WINDOWS_README.md  analyze_ddp_logs.py  api_server.py  compare_ddp_performance.py  ddp_bridge.py  ddp_bridge.service  ddp_output.py  debug_ddp.py  event_poller.py  fpp_setup.py  game_players.py  logger.py  main.py  monitor_ddp.sh  players.py  pyproject.toml  quick_performance_test.sh  requirements.txt  send_ddp_test.py  setup.py  twinklywall.service  verify_optimizations.py  video_player.py  video_renderer.py
TwinklyWall/dotmatrix/: Light Wall Mapping.csv  __init__.py  dot_matrix.py  fpp_output.py  light_wall_mapping.py  performance.py  source_preview.py
TwinklyWall/dotmatrix/rendered_videos/: Star-Spangled Banner - HD Video Background Loop_90x50_20fps.npz  Star-Spangled Banner - HD Video Background Loop_90x50_40fps.npz
TwinklyWall/games/: players.py  tetris.py  tetromino.py
TwinklyWall/games/tetris/: constants.py  enums.py  tetris.py  tetromino.py
games/: tetris.py
(+59 files in other folders)
