[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TwinklyWall"
version = "0.1.0"
description = "A dot matrix display project"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "pygame",
]
requires-python = ">=3.6"
readme = "README.md"

[project.scripts]
twinklywall = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dotmatrix*"]