[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twinklywall"
version = "1.0.0"
description = "High-performance LED matrix renderer for Raspberry Pi with FPP output"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "pygame>=2.5.0",
    "numpy>=1.20.0",
]
requires-python = ">=3.8"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
twinklywall = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dotmatrix*"]